add teamManagementService and refactor
